// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match snapshot 1`] = `
<body>
  <div>
    <div
      aria-busy="true"
      aria-live="polite"
      class="ant-spin ant-spin-spinning css-dev-only-do-not-override-1vtf12y"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
</body>
`;

exports[`should set isSuspense to true 1`] = `
<body>
  <div>
    <div
      aria-busy="true"
      aria-live="polite"
      class="ant-spin ant-spin-spinning css-dev-only-do-not-override-1vtf12y"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div>
    <div
      aria-busy="true"
      aria-live="polite"
      class="ant-spin ant-spin-spinning css-dev-only-do-not-override-1vtf12y"
      style="position: absolute; display: flex; justify-content: center; align-items: center; width: 100%; height: 100%;"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
</body>
`;
